src/site/AppComponent.css
.content {
  min-height: calc(100% - 1px);
  margin-bottom: -75px;
  padding-top: 1px;
}

.push, footer {
  height: 75px;
}

header {
  position: relative;
  font-family: 'Montserrat', sans-serif;
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin: 25px 0 35px 0;
  font-weight: 600;
}

interactive-logo {
  display: block;
}

.content.home header {
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  top: 0;
  bottom: 0;
  margin: 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.content.home interactive-logo {
  transform: translateX(8%) scale(3);
}

.content.home nav {
  margin-top: 60px;
  white-space: nowrap;
}

nav > app-link:first-child {
  margin-left: 0;
}

.mobile-nav-btn {
  display: none;
}

app-link, a {
  position: relative;
  cursor: pointer;
  font-size: 19px;
  display: inline-block;
  margin-left: 15px;
  color: inherit;
  text-decoration: none;
}

app-link::after,
a::after {
  content: '';
  position: absolute;
  width: 0;
  height: 3px;
  left: 0;
  bottom: 0;
  margin-bottom: -3px;
  transition: 0.2s width ease, 0.3s background-color ease;
}

app-link:hover::after,
app-link.selected::after,
a:hover::after {
  width: 100%;
}

app-link.selected::after {
  background-color: var(--app-grey);
}

app-link:hover::after,
a:hover::after {
  background-color: var(--app-red);
}

footer {
  font-size: 12px;
  box-sizing: border-box;
  padding-top: 20px;
  color: var(--app-grey);
  text-align: center;
}

footer > span {
  position: relative;
}

footer .text {
  position: relative;
  z-index: 1;
}

.dark-mode,
.dark-mode::after {
  position: absolute;
  background-color: var(--app-grey);
  width: 12px;
  height: 12px;
  border-radius: 50%;
  top: 0;
  right: 0;
  margin: 1px -20px 0 0;
  cursor: pointer;
  transition: opacity 0.2s ease;
}

.dark-mode {
  opacity: 0.5;
}

.dark-mode::after {
  content: '';
  background-color: var(--app-background);
  margin: -2px 6px 0px 0;
  transition: margin-right 0.2s ease, background-color 0.2s ease;
}

.dark-mode:hover {
  opacity: 1;
  transform: scale(1.2);
}

.dark-mode:hover::after {
  margin-right: 8px;
}

.dark-mode.activated {
  background-color: #f7b800;
}

@media (max-width: 550px) {
  .dark-mode:hover {
    opacity: 0.5;
    transform: unset;
  }

  .dark-mode:hover::after {
    margin-right: 6px;
  }
}

@media (max-width: 680px) {
  .content:not(.home) header {
    position: fixed;
    background: var(--app-background);
    top: 0;
    left: 0;
    right: 0;
    z-index: 1;
    margin: 0;
    padding: 13px 20px;
    border-bottom: 1px solid var(--app-light-grey);
  }

  app-link, a {
    margin: 0 15px 15px 0;
  }

  .content:not(.home) {
    margin-top: 50px;
  }

  .content.home interactive-logo {
    transform: scale(1.5);
  }

  .content.home nav {
    margin-top: 35px;
  }

  .content.home app-link,
  .content.home a {
    display: block;
    margin: 0;
    margin-bottom: 15px;
    text-align: center;
  }

  .content:not(.home) .mobile-nav-btn {
    position: absolute;
    width: 30px;
    height: 30px;
    padding-top: 5px;
    box-sizing: border-box;
    right: 20px;
    top: 13px;
    display: block;
    z-index: 2;
  }

  .content:not(.home) .mobile-nav-btn::after,
  .content:not(.home) .mobile-nav-btn::before {
    content: '';
    width: inherit;
    height: 3px;
    margin: 5px 0;
    background-color: var(--text-color);
    transform-origin: 69% 50%;
    transition: transform 0.2s ease;
    display: block;
  }

  .content:not(.home) nav.visible + .mobile-nav-btn::after {
    transform: rotate(45deg);
  }

  .content:not(.home) nav.visible + .mobile-nav-btn::before {
    transform: rotate(-45deg);
  }

  .content:not(.home) nav {
    position: fixed;
    background-color: var(--app-background);
    top: 0;
    bottom: 0;
    right: 0;
    z-index: 1;
    padding: 70px 0 20px 0;
    box-sizing: border-box;
  }

  .content:not(.home) nav::before {
    content: '';
    position: fixed;
    background-color: rgba(0, 0, 0, 0.5);
    top: 0;
    left: 0;
    bottom: 0;
  }

  .content:not(.home) nav,
  .content:not(.home) nav::before {
    width: 0;
    transition: width 0.2s ease;
  }

  .content:not(.home) nav.visible {
    width: 250px;
  }

  .content:not(.home) nav.visible::before {
    width: calc(100% - 250px);
  }

  .content:not(.home) nav app-link,
  .content:not(.home) nav a {
    margin-left: 25px;
    margin-bottom: 20px;
    float: left;
    clear: left;
  }
}

